# KVRC2022

./: .gitignore  .gitmodules  README.md  rviz.rviz
main_code/: CMakeLists.txt
main_code/include/: main.h  utility.h
main_code/launch/: gazebo.launch  main.launch  qt_only.launch
main_code/resources/: practice.yaml
main_code/result/: result_example.txt
main_code/scripts/: example_control_code.py  mavros_joy_controller.py  rotors_joy_controller.py  spawning.py  tf_broadcaster.py
main_code/src/: main.cpp
